--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>QuizApp</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>QuizApp</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+
 <body>
-  <app-root></app-root>
+    <div class="startpage-container">
+        <h1>QUIZ-APP</h1>
+        <ul class="quiz-content">
+            <h2>NAME</h2>
+            <li><input type="text" name="User temp ID" placeholder="Enter Name Here"></li>
+            <h2>ROOM CODE</h2>
+            <li><input type="text" name="room code ID" placeholder="Enter Room Code"></li>
+            <form action="quiz.component.html">
+                <li><input type="button" name="create game" value="Create Game"></li>
+            </form>
+            <form action="/.lobby.component.html">
+                <li><input type="button" name="join room" value="Join A Room"></li>
+            </form>
+        </ul>
+    </div>
 </body>
 </html>
